@@ -1,3 +1,8 @@
+2004-01-15  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-settings-multimedia-keys.c: fix locating the
+	pixmaps when compiling with a prefix not ending in '/'
+
 2004-01-14  Bastien Nocera  <hadess@hadess.net>
 
 	* Makefile.am:
